objects/APTS_CPRO_Material_Numbers__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>APTS_High_Points__c</fullName>
        <label>High Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Low_Points__c</fullName>
        <label>Low Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Sub__c</fullName>
        <label>Sub #</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Svc__c</fullName>
        <label>Svc #</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core__c</fullName>
        <label>Core</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CPRO Material Numbers</label>
</CustomObject>